Fixes mobile CSS: blurry nav, nav-link alignment etc.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,11 @@ body {
   color: #233140;
 }
 
+a,
+a:hover {
+  color: unset;
+}
+
 nav {
   background-color: transparent;
 }
@@ -33,11 +38,22 @@ nav .navbar-brand {
 .navbar-brand:hover img {
   animation: ring 1s 0s ease-in-out;
 }
-a,
-a:hover {
-  color: unset;
+button.navbar-toggler {
+  border: none;
 }
+button.navbar-toggler:focus {
+  box-shadow: none;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23f5f5dc' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+#navbarSupportedContent {
+  backdrop-filter: blur(10px);
+}
+
 a.nav-link {
+  text-align: center;
   font-size: 2rem;
   color: #f5f5dc;
   text-shadow: 2px 2px 4px #000;
@@ -145,31 +161,11 @@ section h1 {
   text-decoration: dotted underline;
 }
 
-@media (min-width: 768px) {
-  .navbar.fixed-top {
-    padding: 1em 0;
-    transition: padding 0.3s;
-  }
-
-  .navbar.fixed-top .navbar-brand {
-    font-size: 2em;
-    transition: all 0.3s;
-  }
-
-  .navbar.fixed-top.navbar-shrink {
-    padding: 0;
-    background-color: teal;
-    transition: background-color 0.3s;
-    box-shadow: 0 6px 10px rgb(0 0 0 / 30%);
-  }
-
-  .navbar.fixed-top.navbar-shrink .navbar-brand {
-    font-size: 1.5em;
-  }
-
-  header {
-    padding-top: 9em;
-  }
+.navbar.fixed-top.navbar-shrink {
+  padding: 0;
+  background-color: teal;
+  transition: background-color 0.3s;
+  box-shadow: 0 6px 10px rgb(0 0 0 / 30%);
 }
 
 #contact a {
@@ -193,6 +189,7 @@ section h1 {
   max-width: fit-content;
   text-align: center;
   transition: color 0.15s ease-out, background-color 0.15s ease-out;
+  font-size: 1rem;
 }
 #contact #pgp-key {
   display: none;
@@ -269,4 +266,32 @@ a.highlight-dark {
   background: linear-gradient(90deg, #233140 50%, #ffffff00 50%);
   background-size: 200% 100%;
   background-position: 100% 0;
+}
+
+@media (min-width: 768px) {
+  .navbar.fixed-top {
+    padding: 1em 0;
+    transition: padding 0.3s;
+  }
+
+  .navbar.fixed-top .navbar-brand {
+    font-size: 2em;
+    transition: all 0.3s;
+  }
+
+  .navbar.fixed-top.navbar-shrink {
+    padding: 0;
+  }
+
+  .navbar.fixed-top.navbar-shrink .navbar-brand {
+    font-size: 1.5em;
+  }
+
+  header {
+    padding-top: 9em;
+  }
+
+  #contact #email {
+    font-size: 1.25rem;
+  }
 }
